fixing z-index

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
 .pixelated-scroll__section {
   position: sticky;
   top: 0;
+  z-index: 2;
 }
 
 .section_logo {
